Add get_nhbrs(n, attr) thput bench for Neo4j